# poker-simulation

./: .gitignore  CMakeLists.txt  README.md  index.py  pyproject.toml  run_api.sh  vercel.json
.github/workflows/: deploy-pages.yml
api/: [...path].py  index.py
cpp/: CMakeLists.txt
cpp/include/poker_sim/: hand_eval.hpp  simulation.hpp
cpp/src/: bindings.cpp  hand_eval.cpp  simulation.cpp
python/: requirements-local.txt  requirements.txt
python/api/: __init__.py  main.py
python/poker_sim/: __init__.py  auth_db.py  card_detector.py  chat_bot.py  db_router.py  equity.py  friends_db.py  games_db.py  hand_eval.py  live_analysis.py  monte_carlo.py  supabase_backend.py  types.py  winnings_db.py
scripts/: download_card_imgs.py
supabase/: schema.sql
web/: .env.example  index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.css  App.tsx  index.css
web/src/components/: AIChatPanel.css  AIChatPanel.tsx  CameraScanModal.css  CameraScanModal.tsx  EquityGraph.css  EquityGraph.tsx  Layout.css  Layout.tsx  PokerTips.css  PokerTips.tsx  ProfileMenu.css  ProfileMenu.tsx  Sidebar.css  Sidebar.tsx
web/src/context/: AuthContext.tsx  ThemeContext.tsx
web/src/lib/: api.ts  supabase.ts
web/src/pages/: Dashboard.css  Dashboard.tsx  Friends.css  Friends.tsx  Games.css  Games.tsx  HandHierarchy.css  HandHierarchy.tsx  LiveGame.css  LiveGame.tsx  Login.css  Login.tsx  Saved.css  Saved.tsx  Winnings.css  Winnings.tsx
