[project]
name = "poker-simulation"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
  "fastapi>=0.104.0",
  "uvicorn[standard]>=0.24.0",
  "python-multipart>=0.0.6",
  "Pillow>=10.0.0",
  "pybind11>=2.11.0",
  "numpy>=1.24.0",
  "bcrypt>=4.0.0",
  "openai>=1.0.0",
  "supabase>=2.0.0",
]

[project.scripts]
app = "index:app"
